force-app/main/default/objects/GridColor__mdt/GridColor__mdt.object-meta.xml
<CustomObject>
    <label>GridColor</label>
    <pluralLabel>GridColors</pluralLabel>
</CustomObject>