force-app/main/default/objects/GridColor__mdt/fields/Dark_Text_Color__c.field-meta.xml
<CustomField>
    <fullName>Dark_Text_Color__c</fullName>
    <label>Dark Text Color</label>
    <length>100</length>
    <type>Text</type>
</CustomField>