force-app/main/default/objects/GridColor__mdt/fields/Font_Size_For_Heading__c.field-meta.xml
<CustomField>
    <fullName>Font_Size_For_Heading__c</fullName>
    <label>Font Size For Heading</label>
    <length>100</length>
    <type>Text</type>
</CustomField>