force-app/main/default/objects/GridColor__mdt/fields/Font_Size_For_Text__c.field-meta.xml
<CustomField>
    <fullName>Font_Size_For_Text__c</fullName>
    <label>Font Size For Text</label>
    <length>100</length>
    <type>Text</type>
</CustomField>