force-app/main/default/objects/GridColor__mdt/fields/Light_Text_Color__c.field-meta.xml
<CustomField>
    <fullName>Light_Text_Color__c</fullName>
    <label>Light Text Color</label>
    <length>100</length>
    <type>Text</type>
</CustomField>