force-app/main/default/objects/GridColor__mdt/fields/Primary_Color__c.field-meta.xml
<CustomField>
    <fullName>Primary_Color__c</fullName>
    <label>Primary Color</label>
    <length>100</length>
    <type>Text</type>
</CustomField>