force-app/main/default/objects/GridColor__mdt/fields/Secondary_Color__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Color__c</fullName>
    <label>Secondary Color</label>
    <length>100</length>
    <type>Text</type>
</CustomField>