force-app/main/default/objects/GridColor__mdt/fields/Tertiary_Color__c.field-meta.xml
<CustomField>
    <fullName>Tertiary_Color__c</fullName>
    <label>Tertiary Color</label>
    <length>100</length>
    <type>Text</type>
</CustomField>